tests/pass/0119_print_string_literals.ee
fn main() {
    print("hello");
    println(" world");
    println("");
    println("done");
}
