tests/fail/0073_string_arithmetic.ee
fn main() {
    print("hello" - "h");
}
